# Astra_Gesture_Control

./: .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  INSTALLATION_SUCCESS.md  Makefile  PACKAGING.md  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  astra-gesture-control.desktop  build-all.sh  build-appimage.sh  build-deb.sh  build-rpm.sh  install-system.sh  install.sh  start.sh  test_enigo.rs  verify-packaging.sh
packaging/: astra-gesture-control.spec
packaging/debian/DEBIAN/: control  postinst  postrm  prerm
packaging/iso-integration/: README.md  astra-gesture-control.metainfo.xml  firstboot-install.service
src/: gui.rs  main.rs
